# DalamudPluginPR2

./: .pre-commit-config.yaml  Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml
src/dalamud_plugin_pr2/: __main__.py  action.py  config.py
